# conquest-public

./: .gitignore  CHALLENGES.md  README.md  pyproject.toml  requirements.txt
benchmarks_buy_hold/: config.json  main.py
cgrowth/: config.json  main.py  research.ipynb
chybrid/: config.json  main.py
conquest/: __init__.py  secrets.py
conquest/backtest/: __init__.py  concentration.py  costs.py  csa.py  deflated_sharpe.py  engine.py  hedged.py  metrics.py  ranker.py  regime_breakdown.py
conquest/data/: __init__.py  bls.py  cache.py  credit.py  credit_stress_live.py  fred.py  oecd.py  series.py  sp500.py  vix_term.py
conquest/indicators/: __init__.py  adx.py  macd.py  momp.py  realized_vol.py  rsi.py  sma.py  trix.py
conquest/models/: __init__.py  adaptive_residual.py  base.py  (+26 more)
conquest_options/: __init__.py  config.json  dyn_rotation.py  dyn_universe.py  exit_manager.py  main.py  metrics_per_trade.py  option_selector.py  position_sizer.py  themes.json
cstability/: config.json  main.py
scripts/: build_acwx_top_universe.py  build_offline_bundle.py  classify_regime.py  compute_4vote_signal.py  export_ai_sector.py  export_benchmarks_for_webapp.py  export_breadth.py  export_gmm_regime.py  export_lean_equity_curves.py  export_pinned_holdings.py  export_sp500_universe.py  export_t10y2y.py  export_unrate.py  export_v10_signals.py  export_vix.py  fetch_cloud_backtest.py  fetch_spy_since_inception.py  ingest_gdelt_sentiment.py  object_store_push.py  reconstruct_trades_from_orders.py  refresh_data.py  serve_webapp_nocache.py  sp500_pit_membership.py  sync_to_lean.py
(+166 files in other folders)
